--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -572,6 +572,11 @@
 			border-left: 0px !important;
 			padding-bottom: 40px !important;
 			padding-top: 80px !important;
+			.results-for{
+				position: absolute;
+			    top: 11px;
+			    left: 67px;
+			}
 			.toggle-search-sidebar{
 				position: absolute;
 				top: 20px;
