--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -124,8 +124,384 @@
 	.views-view-grid.cols-3 .row > :nth-child(3){
 		display: block;
 	}
+	.panels-flexible-region-new-slider{
+		margin-top: 5px !important;
+		.owl-wrapper {
+		    transform: inherit !important;
+		    transition: inherit !important;
+		    .owl-item{
+		    	float: inherit !important;
+		    	h2{
+		    		width: 100%;
+		    		font-size: @font-size1-2;
+		    	}
+		    	.views-field-body{
+		    		padding-bottom: 25px;
+		    		padding-top: 15px;
+		    		.field-content{
+		    			width: 100%;
+		    		}
+		    	}
+		    	.item-0{
+		    		a{
+			    		img{
+			    			height: 185px;
+			    		}
+			    	}
+		    	}
+		    	.item-1{
+		    		.views-field-field-image{
+		    			display: none !important;
+		    		}
+		    		.views-field-title-field{
+		    			background-color: inherit;
+		    			h2{
+		    				a{
+		    					color: @color-primary-dark !important;
+		    				}
+		    			}
+		    		}
+		    		.views-field-body{
+		    			background-color: inherit;
+		    			color: @color-primary-dark !important;
+		    		}
+		    	}
+		    }
+		    .owl-controls.clickable{
+				display: none !important;
+			}
+	    }
+	}
+	//latest news
+	.panels-flexible-region-new-news_section{
+		padding-bottom: 15px;
+		h3.pane-title{
+			color: @color-primary-dark;
+		}
+		.view-display-id-oshnews_latest{
+			.view-display-id-attachment_1{
+				display: none;
+			}
+		}
+		.views-item-columns-container{
+			padding: 0px !important;
+    		background-color: initial !important;
+    		min-height: auto !important;
+    		border-bottom: 2px solid @color-text-purple;
+    		padding-bottom: 15px !important;
+    		margin-bottom: 20px;
+    		.date-display-single{
+    			color: @color-text-purple;
+    		}
+    		.more-link{
+    			text-align: left !important;
+    			margin-top: 5px !important;
+    		}
+		}
+    }
+    //Promotional materials
+	.panels-flexible-region-new-promotional_materials{
+		padding-bottom: 15px;
+		#mini-panel-promotional_materials{
+			.pane-promotional-materials{
+				div.pane-title{
+					border-bottom: 2px solid @color-text-purple;
+				}
+				.view-promotional-materials{
+					.views-item-columns-container{
+						background-color: @color-white;
+						min-height: auto;
+						border-bottom: 2px solid @color-text-purple;
+						margin-bottom: 20px;
+    					padding-bottom: 15px;
+						.views-field-field-image{
+							width: 30%;
+							float: left;
+						}
+						.materials-content-wrapper{
+							padding: 0px 0px 0px 15px;
+							overflow: hidden;
+							width: 70%;
+							.field-name-title-field{
+								min-height: auto;
+								h4{
+									margin-top: 0px;
+									margin-bottom: 0px;
+									font-weight: bold;
+									font-size: @font-size1-2;
+								}
+							}
+						}
+						.field-name-related-partners{
+							.node-partner{
+								background-color: @color-primary-dark;
+								padding: 15px;
+								color: @color-white;
+								margin-top: 15px;
+								h4{
+									a{
+										font-size: @font-size0-9;
+										color: @color-white;
+										margin-top: 0px;
+									}
+								}
+								.more-link{
+									color: @color-white;
+									text-align: left;
+								}
+							}
+						}
+						a.more-link{
+							text-align: left;
+							margin-top: 5px;
+						}
+					}
+				}
+			}
+		}
+	}
+	//Oira tools
+	.panels-flexible-row-new-16{
+		.panels-flexible-region-new-tools{
+			padding-bottom: 15px;
+			h3{
+				color: @color-primary-dark;
+			}
+			.view-display-id-block{
+				border-bottom: 2px solid @color-text-purple;
+				padding-bottom: 15px !important;
+				margin-bottom: 10px !important;
+	    		.field-type-image{
+	    			margin-top: 15px;
+	    		}
+	    		.field-name-title-field{
+	    			a{
+	    				font-size: @font-size1 !important;	
+	    			}	
+	    		}
+	    		.tool-of-the-week-label{
+	    			position: absolute;
+	    			top: -202px;
+	    			border-bottom: none !important;
+	    		}
+	    		.field-name-related-partners{
+					.node-partner{
+						background-color: @color-primary-dark;
+						padding: 15px;
+						color: @color-white;
+						margin-top: 15px;
+						h4{
+							a{
+								font-size: @font-size0-9;
+								color: @color-white;
+								margin-top: 0px;
+							}
+						}
+						.more-link{
+							color: @color-white;
+							text-align: left;
+						}
+					}
+				}
+				a.more-link{
+					text-align: left;
+				}
+			}
+		}
+		.pane-views.pane-tools{
+			.pane-title{
+				border-bottom: 2px solid @color-text-purple;
+			}
+		}
+		.view-display-id-block_1{
+			.views-item-columns-container{
+				background-color: inherit !important;
+				padding: 0px 0px 15px 0px!important;
+				margin-bottom: 15px !important;
+				border-bottom: 2px solid @color-text-purple;
+				> .field-content{
+					h4{
+						margin-top: 0px;
+						margin-bottom: 0px;
+					}
+				}
+				.field.field-name-field-country, .field-type-language-field, .field-name-field-sector{
+					float: left;
+    				clear: both;
+    				margin-top: 10px;
+				}
+				.field-type-language-field{
+					margin-bottom: 10px;
+				}
+				a.more-link{
+					text-align: left;
+					margin-top: 0px;
+					clear: both;
+				}
+				.field-name-field-tool-link{
+					clear: both;
+				}
+				.field-name-related-partners{
+					clear: both;
+					.node-partner{
+						background-color: @color-primary-dark;
+						padding: 15px;
+						color: @color-white;
+						margin-bottom: 15px;
+						h4{
+							a{
+								font-size: @font-size0-9;
+								color: @color-white;
+								margin-top: 0px;
+							}
+						}
+						.more-link{
+							color: @color-white;
+							text-align: left;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 /*END HOME*/
+
+/*WHAT'S NEW SECTION
+*********************************************************************/
+.page-what-is-new{
+	//articles above picture
+	.panels-flexible-region-new-image{
+		margin-top: 5px;
+		.field-type-image{
+			img{
+				height: 185px;
+			}
+		}
+		.pane-node-title-field{
+			margin-top: 0px;
+			position: relative;
+			background-color: inherit;
+			h1{
+				color: @color-primary-dark;
+				font-size: @font-size2-2;
+				width: 100%;
+			}
+		}
+	}
+	.panels-flexible-row-new-2{
+		padding-top: 0px;
+		background-color: inherit;
+		h2{
+			margin-top: 0px;
+			font-size: @font-size1-2;
+			line-height: inherit;
+		}
+		.views-field-field-summary{
+			padding: 0px 0px 0px 0px;
+		}
+	}
+	.panels-flexible-row-new-3{
+		background-color: @color-primary;
+		padding-bottom: 15px;
+		.panels-flexible-region-new-latest_news{
+			h3.pane-title{
+				color: @color-primary-dark;
+				border-bottom: 2px solid @color-primary-dark;
+				&:after{
+		    		.section-icons("../images/icons/005.png");
+		    	}
+			}
+			.views-item-columns-container{
+				padding: 0px;
+				margin-top: 15px;
+	    		min-height: auto;
+	    		background-color: inherit;
+	    		border-bottom: 2px solid @color-primary-dark;
+	    		padding-bottom: 15px;
+	    		a.more-link{
+					text-align: left;
+					margin-top: 5px;
+				}
+				.date-display-single{
+					color: @color-text-purple;
+				}
+			}
+			.views-view-grid.cols-2{
+				> .row-last{
+					display: none;
+				}
+			}
+			.more-link{
+				a{
+					color: @color-label;
+				}
+			}
+		}
+	}
+	.panels-flexible-row-new-6{
+		background-color: @color-white !important;
+		.panels-flexible-region-new-new_tools{
+			.view-id-tools{
+				padding-top: 20px;
+				.views-item-columns-container{
+					background-color: inherit;
+					min-height: auto;
+					border-bottom: 2px solid @color-primary-dark;
+					padding-bottom: 15px;
+					overflow: hidden;
+					margin-bottom: 15px;
+					.views-field-field-image{
+						min-height: auto;
+						width: 35%;
+						float: left;
+						margin-right: 15px;
+						margin-bottom: 10px;
+						img[alt="tools_default.png"]{
+							margin: 0 auto;
+							padding: 0px;
+							max-height: 250px;//testing
+						}
+					}
+					a.more-link{
+						text-align: left;
+						margin-top: 5px;
+					}
+					.tool-teaser-content-wrapper{
+						padding: 0px;
+						.field-name-related-partners{
+							.node-partner{
+								background-color: @color-primary-dark;
+								padding: 15px;
+								color: @color-white;
+								margin-top: 15px;
+								h4{
+									a{
+										font-size: 0.9em;
+										color: @color-white;
+										margin-top: 0px;
+									}
+								}
+								.more-link{
+									color: @color-white;
+									text-align: left;
+								}
+							}
+						}
+						.tools_see_more-processed{
+							margin-left: 0px;
+							a.more-link{
+								text-align: left;
+								margin-top: 5px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+/*END WHAT'S NEW*/
 
 
 
