--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -108,6 +108,10 @@
 }
 /*END HEADER*/
 
+h1{
+	font-size: @font-size2-2;
+}
+
 .breadcrum-container{
 	display: none;
 }
@@ -116,6 +120,11 @@
 	.article-content-container {
     	width: inherit;
 	}
+}
+
+.page-header {
+    padding-bottom: 0px;
+    margin: 22px 0 11px;
 }
 
 /*HOME
@@ -503,8 +512,559 @@
 }
 /*END WHAT'S NEW*/
 
+/*ARTICLES
+****************************************************************/
+.node-type-article{
+	h1 {
+		margin-top: 20px;
+		font-size: @font-size1-3;
+		color: @color-text-purple;
+	}
+	h2 {
+	    font-size: @font-size1-2;
+	    line-height: auto !important;
+	}
+	h4{
+		font-size: @font-size1-2;
+	}
+	.article-content-container{
+		width: auto;
+	}
+	.pane-node-field-summary {
+	    font-size: 1em;
+	    line-height: auto;
+	    color: @color-text-purple;
+	}
+	.pane-node-body {
+		ul, .node-type-article .pane-node-body ol {
+    		margin-left: 19px;
+    	}
+    	p{
+    		> img{
+    			width: 100%;
+    		}
+    	}
+	}
+	.panels-flexible-region-new-cover_image{
+		.field-type-image {
+		    margin-top: 5px;
+		    img{
+		    	height: 185px;
+		    }
+		}
+	}
+	.oira-heading-pagination-container{
+		margin-left: -15px;
+		margin-right: -15px;
+		li{
+			width: 50%;
+			font-size: @font-size0-9;
+			span{
+				font-size: @font-size1-2;
+			}
+		}
+		li.pagination-next{
+			text-align: right;
+		}
+	}
+	//ADITIONAL RESOURCES
+	.panels-flexible-region-new-add_res-inside{
+		.pane-node-field-aditional-resources{
+			.pane-additional-resources{
+				.views-view-grid.cols-3 > .row{
+					display: none;
+				}
+				.views-view-grid.cols-3 .row:nth-child(1){
+					display: block !important;
+				}
+				.views-view-grid.cols-3 .row > div{
+					display: none;
+				}
+				.views-view-grid.cols-3 .row > div:nth-child(1){
+					display: block;
+				}
+				.views-view-grid.cols-3 .row > div:nth-child(2){
+					display: block;
+				}
+			}
+			#additional-resources-youtube-pane{
+				.node-youtube{
+					
+				}
+			}
+			#additional-resources-slideshare-pane{
+				.node-slideshare{
+					
+				}
+			}
+			#additional-resources-news-pane{
+				
+			}
+			#additional-resources-external_url-pane{
+				.node-external-url{
+					
+				}
+			}
+			#additional-resources-flickr-pane{
+				.view-additional-resources{
+					> div{
+						article:nth-child(2){
+							display: none;
+						}
+						article{
+							.flickr-photoset{
+								.flickr-wrap{
+									width: 33%;
+								}
+								.flickr-wrap:nth-child(4){
+									display: none;
+								}
+								.flickr-wrap:nth-child(5){
+									display: none;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	//END ADITIONAL RESOURCES
+	
+	//accesibility page
+	.accesibility_table{
+		p, tr, td{
+			font-size: 0.95em;
+			text-align: center;
+		}
+	}
+	
+	//privacy notice
+	iframe{
+		width: 100%;
+		height: 220px;
+	}
+}
+/*END ARTICLES*/
 
+/*SITE MAP
+********************************************************/
+.page-sitemap{
+	#block-system-main{
+		margin-bottom: 10px;
+		padding-top: 15px;
+		padding-bottom: 20px;
+	}
+	.site-map-box-menu{
+		.content{
+			> ul.site-map-menu{
+				padding-left: 0px !important;
+				li{
+					margin-bottom: 5px;
+					margin-top: 5px;
+				}
+			}
+		}
+	}
+}
+/*END SITE MAP*/
 
+/*page oira faqs
+****************************************************/
+.page-oira-faqs{
+	#block-system-main{
+		.view-id-faqs_oira{
+			.views-field-title-field{
+				.field-content{
+					font-size: @font-size1;
+				}
+			}
+		}
+	}
+}
+/*end page oira faqs*/
+
+/*FAQ'S and
+**************************************************************/
+.page-faq{
+	.panels-flexible-row-new-main-row{
+		.field-name-body{
+			font-size: @font-size1;
+		}
+	}
+	.panels-flexible-row-new-1{
+		.view-id-faqs{
+			.views-field-title-field{
+				.field-content {
+					font-size: 1em;
+					line-height: initial;
+				}
+			}
+		}
+	}
+	.captchaImg {
+		width: 230px;
+	}
+	.form-item-security-code.form-group{
+		width: 100% !important;
+		margin-bottom: 0px !important;
+		#security_code{
+	    	width: 100% !important;
+		}
+	}
+	.webform-submit{
+		position: inherit !important;
+		bottom: 37px;
+	    background-color: @color-see-more !important;
+	    color: @color-white !important;
+	    border: 1px solid @color-see-more !important;
+	    width: 100%;
+	    margin-bottom: 20px;
+	}
+}
+/*end faq's*/
+
+/*OIRA NEWS
+*************************************************************/
+.view-display-id-oshnews_list{
+	font-size: 16px;
+	article{
+		padding-top: 25px;
+    	padding-bottom: 20px;
+    	.container .row{
+    		.col-xs-3{
+				width: 35%;
+    		}
+    		.col-xs-9{
+    			float: none;
+    			width: 100%;
+    		}
+    	}
+    	.field-name-title-field{
+    		margin-bottom: 15px;
+    		h2{
+				line-height: 16px;
+	    		a{
+	    			font-size: .6em;
+	    		}
+	    	}
+    	}
+    	.field-name-field-summary{
+    		font-size: 1em;
+    	}
+    	.field-name-body{
+    		margin-bottom: 0px !important;
+    		p{
+    			margin-bottom: 0px;
+    		}
+    		.more-link{
+				margin-top: 5px !important;
+			}
+    	}
+	}
+}
+
+//News detail
+.node-news{
+	h1{
+		color: @color-text-grey;
+		margin-bottom: 30px;
+		font-size: 1.4em;
+		margin-top: 0px;
+    	line-height: inherit;
+	}
+	.field-name-field-publication-date{
+	    margin-top: 20px;
+	}
+	.field-name-field-image{
+		width: 35%;
+	}
+}
+/*END OIRA NEWS*/
+
+/*COUNTRIES LIST
+*********************************************************/
+.page-eu-national-partners{
+	h1{
+		color: @color-text-grey;
+	}
+	.pane-oira-country-oira-country-count-all{
+		.pane-content{
+			margin-top: 10px;
+			.country-content-count-label{
+				display: inline-block;
+    			width: 33%;
+    			&:first-child{
+    				margin-bottom: 20px;
+    			}
+				&:last-child{
+					min-width: 92px;
+				}
+				.form-group{
+					margin-bottom: 0px;
+				}
+				.form-item{
+					label{
+						font-size: 0.9em;
+						margin-bottom: 0px;
+					}
+					span{
+					    margin-top: 15px;
+					}
+				}
+			}
+		}
+	}
+	.view-id-countries{
+		.views-item-columns-container{
+			margin-bottom: 15px;
+			.views-field-field-flag{
+				margin: 20px 20px 0px 20px;
+			}
+			.views-field-name-field{
+				margin: 20px 20px 20px 20px;
+			}
+			.views-field-country-content-count{
+				margin: 0px 10px 20px 10px;
+			}
+		}
+	}
+}
+/*END COUNTRY LIST*/
+
+/* COUNTRY PROFILE
+********************************************************************/
+.page-country-profile{
+	.panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first{
+		margin-top: 5px;
+		padding-top: 30px;
+		.pane-taxonomy-term-country-content-count{
+			margin-top: 15px;
+		}
+	}
+	div[id ^= "mini-panel-partner_in_country"]{
+		.panels-flexible-row-first{
+			.panels-flexible-row-inside-first{
+				h2{
+					font-size: @font-size1-6;
+					text-align: left !important;
+				}
+			}
+		}
+		.partner-contact-container,
+		.partner-social-container,
+		.partner-colaborators-container{
+			cursor: pointer;
+			min-height: 0px !important;
+			.pane-title{
+				margin-bottom: 0px;
+				&:after{
+					content: "\e252";
+				    font-family: "Glyphicons Halflings";
+				    padding-left: 10px;
+				    color: @color-see-more;
+				    vertical-align: middle;
+				}
+			}
+			.arrow-up{
+				&:after{
+					content: "\e253";
+				    font-family: "Glyphicons Halflings";
+				    padding-left: 10px;
+				    color: @color-see-more;
+				    vertical-align: middle;
+				}
+			}
+			.pane-contact-information-partner,
+			.pane-node-field-social-profile,
+			.pane-node-field-collaborator{
+				>.pane-content{
+					display: none;
+					margin-top: 15px;
+				}
+			}
+		}
+		.partner-text2-container{
+			border-bottom: 2px solid @color-text-purple-darker;
+		}
+	}
+	//when have only 1 partners in a country
+	.partners-no-1{
+		margin-bottom: 40px;
+		.country-partner-wrapper{
+			&:last-child{
+				margin-bottom: 30px;
+				border-left: none;
+			}
+			div[id ^= "mini-panel-partner_in_country"]{
+				margin: 0px 20px;
+				div[class*="col-sm"]{
+					padding-right: 0px;
+					padding-left: 0px;
+				}
+				.panels-flexible-row-new-1{
+					border-bottom: none;
+				}
+				.panels-flexible-row-inside-first{
+					margin-left: 0px;
+	    			margin-right: 0px;
+	    			.partner-image-container{
+						min-height: 160px;
+					}
+					.partner-text-container{
+						h2{
+							border-bottom: none;
+							padding-bottom: 0px;
+						}
+					}
+				}
+				.panels-flexible-row-new-1-inside{
+					> div{
+						width: 100%;
+					}
+					.partner-contact-container, .partner-social-container, .partner-colaborators-container, .partner-text2-container{
+						min-height: auto;
+						padding-top: 15px;
+						padding-bottom: 15px;
+						margin-top: 0px;
+					}
+					.partner-colaborators-container{
+						border-bottom: 2px solid @color-primary-dark;
+					}
+				}
+			}
+		}
+	}
+	//when have 2 partners in a country
+	.partners-no-2{
+		border-bottom: none;
+		margin-bottom: 0px;
+		.country-partner-wrapper{
+			&:last-child{
+				border-left: none;
+			}
+			div[id ^= "mini-panel-partner_in_country"]{
+				.panels-flexible-row-inside-first{
+					.partner-image-container{
+						min-height: 160px;
+					}
+					.partner-text-container{
+						h2{
+							border-bottom: none;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+/*END COUNTRY PROFILE*/
+
+/*PARTNER DETAIL PAGE
+**********************************/
+.node-type-partner{
+	#block-system-main{
+		> div{
+			> div{
+				margin-top: 30px;
+			}
+		}
+		div[id ^= "mini-panel-partner_in_country"]{
+			overflow: hidden;
+			.panels-flexible-row-new-1{
+				border-bottom: none;
+			}
+			.panels-flexible-row-first{
+				border-bottom: 2px solid @color-text-purple-darker;
+				.panels-flexible-row-inside-first{
+					margin-top: 0px !important;
+					border-bottom: none;
+					padding-bottom: 0px;
+					.partner-image-container{
+						min-height: 160px;
+					}
+					h2{
+						font-size: @font-size1-6;
+						text-align: left !important;
+					}
+				}
+			}
+			.panels-flexible-row-last{
+				
+			}
+			.partner-contact-container,
+			.partner-social-container,
+			.partner-colaborators-container{
+				cursor: pointer;
+				min-height: 0px !important;
+				padding-top: 15px;
+				padding-bottom: 15px;
+				.pane-title{
+					margin-bottom: 0px;
+					&:after{
+						content: "\e252";
+					    font-family: "Glyphicons Halflings";
+					    padding-left: 10px;
+					    color: @color-see-more;
+					    vertical-align: middle;
+					}
+				}
+				.arrow-up{
+					&:after{
+						content: "\e253";
+					    font-family: "Glyphicons Halflings";
+					    padding-left: 10px;
+					    color: @color-see-more;
+					    vertical-align: middle;
+					}
+				}
+
+				.pane-contact-information-partner,
+				.pane-node-field-social-profile,
+				.pane-node-field-collaborator{
+					>.pane-content{
+						display: none;
+						margin-top: 15px;
+					}
+				}
+			}
+			.partner-contact-container{
+				margin-top: 0px;
+				border-bottom: 2px solid @color-text-purple-darker;
+				.field-name-field-country{
+
+				}
+			}
+			.partner-social-container{
+				margin-top: 0px;
+				border-bottom: 2px solid @color-text-purple-darker;
+			}
+			.partner-colaborators-container{
+				margin-top: 0px;
+				border-bottom: 2px solid @color-text-purple-darker;
+				.field-name-field-collaborator{
+					>div.field-items{
+						>div.field-item{
+							.field-name-field-collaborator-name{
+								font-size: @font-size0-8;
+							}
+						}
+					}
+				}
+			}
+			.partner-text2-container{
+				margin-top: 0px;
+				padding-top: 15px;
+				padding-bottom: 15px;
+				border-bottom: 2px solid @color-text-purple-darker;
+				a{
+
+				}
+			}
+		}
+	}
+}
+/*END PARTNER DETAIL PAGE*/
 
 
 }
