--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -622,9 +622,11 @@ div[id ^= "mini-panel-partner_in_country"]{
 			> a{
 				clear: both;
 			}
+			.form-type-textfield{
+				width: 100% !important;
+			}
 			#edit-submit{
-				left: 305px;
-				right: inherit;
+
 			}
 			.toggle-search-sidebar{
 				display: block !important;
@@ -663,7 +665,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 				top: 20px;
 				span{
 					height: 40px;
-						width: 40px;
+					width: 40px;
 					overflow: hidden;
 					background-color: @color-primary-dark;
 					display: block;
