--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -877,6 +877,7 @@
 @font-size0-8: 0.8em;
 @font-size0-9: 0.9em;
 @font-size1: 1em;
+@font-size1-1: 1.1em;
 @font-size1-2: 1.2em;
 @font-size1-3: 1.3em;
 @font-size1-4: 1.4em;
